[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hhunter"
version = "0.1.0"
description = "Heartbeat Hunter - istatistiksel C2 beaconing tespit motoru (Zeek/NetFlow)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Yigit Yucel", email = "yigit.yucel.official@gmail.com" }]
dependencies = [
    "pandas>=2.0",
    "pyarrow>=14.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.scripts]
hhunter = "hhunter.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/hhunter"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
